Fix .content.narrow on small screens

--- a/assets/stylesheets/fly.css.scss
+++ b/assets/stylesheets/fly.css.scss
@@ -321,6 +321,10 @@ footer .nav-h {
     margin-left: 2em;
     margin-right: 2em;
   }
+
+  .content.narrow {
+    width: 90%;
+  }
 }
 
 @media #{$smallBreakPoint} {
